ctdb: Fix the build on FreeBSD 10.1

We get sockaddr_in directly in parse_ipv4

Bug: https://bugzilla.samba.org/show_bug.cgi?id=11465

Signed-off-by: Volker Lendecke <vl@samba.org>
Reviewed-by: Ralph Boehme <slow@samba.org>
(cherry picked from commit 1d79f6c9e5423202d5275727e1ddc60acce65b4c)